[package]
name = "realms"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A powerful and lightweight graphics library for making Rust games"
homepage = "https://github.com/dylanopen/realms"
documentation = "https://github.com/dylanopen/realms/tree/master/docs"
repository = "https://github.com/dylanopen/realms"

[dependencies.sdl2]
version = "0.36.0"
features = ["image"]

